<resources>
    <string name="app_name">Dianping_client</string>
    <string name="btn_string">点击实现效果</string>
    <string name="welcome_pager_btn">点击进入</string>
    <string name="main_my">我的</string>
    <string name="main_tuan">团购</string>
    <string name="main_search">发现</string>
    <string name="main_home">首页</string>
    <string name="home_title">首页</string>
    <string name="tuan_title">团购</string>
    <string name="search_title">发现</string>
    <string name="my_title">我的</string>
    <string name="choose_city">选择城市</string>
    <string name="city_choose">选择城市</string>
    <string name="city_location">定位城市</string>
    <string name="city_name">正在定位中...</string>
    <string name="back">返回</string>
    <string name="all_category">全部分类</string>
    <string name="goodsDetails">商品详情</string>
    <string name="btn_buy_now">立即购买</string>
    <string name="clickForBigImage">点击查看大图</string>
    <string name="goods_details_title">商品信息标题</string>
    <string name="goods_details_desc">商品详情描述</string>
    <string name="support_tuihuo">是否支持随时退货</string>
    <string name="support_tuikuan">是否支持过期退款</string>
    <string name="deadline">2天以上</string>
    <string name="already_sell_count">已有3人购买</string>
    <string name="tv_more_details">查看图文详情</string>
    <string name="goods_details_shop_title">商家名称</string>
    <string name="shop_number">010-00001010</string>
    <string name="shop_address">北京市海淀区</string>
    <string name="shop_distance"><![CDATA[>12km]]></string>
    <string name="goods_details_warm">温馨提示</string>
    <string name="goods_details_comment">评论</string>
    <string name="score">分</string>
    <string name="goods_no_comments">暂无评论</string>
    <string name="tv_more_comments">查看更多评论</string>
</resources>
