<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<TextView
    android:id="@+id/goods_details_shop_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:text="@string/goods_details_shop_title"
    android:textSize="@dimen/title_text_size"
    android:gravity="center_vertical"/>
    <ImageView
        android:padding="@dimen/little_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:src="@drawable/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:padding="@dimen/little_space"
                android:id="@+id/goods_details_shop_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_number"/>
            <TextView
                android:padding="@dimen/little_space"
                android:id="@+id/goods_details_shop_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_address"/>
        </LinearLayout>
        <TextView
            android:id="@+id/goods_details_shop_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_distance"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/little_space"/>
        <ImageView
            android:padding="@dimen/little_space"
            android:id="@+id/goods_details_shop_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call"
            android:layout_marginRight="@dimen/normal_space"/>
    </LinearLayout>
</LinearLayout>