<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/little_space">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/goods_details_comment"
            android:textSize="@dimen/title_text_size"
            android:padding="@dimen/little_space"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/goods_comment_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.2"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/normal_orange_color"
            android:padding="@dimen/little_space"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/normal_orange_color"
            android:text="@string/score"
            android:paddingEnd="@dimen/little_space"
            android:paddingRight="@dimen/little_space"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:src="@drawable/divider"
        android:contentDescription="@null"
        android:scaleType="fitXY"/>
    <ListView
        android:id="@+id/lv_goods_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"></ListView>
    <TextView
        android:id="@+id/tv_goods_no_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goods_no_comments"
        android:gravity="center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider"
        android:contentDescription="@null"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/tv_more_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_more_comments"
        android:gravity="center"
        android:visibility="gone"/>
</LinearLayout>