<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>
    <RadioGroup
        android:id="@+id/main_bottom_tabs"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <RadioButton
            android:id="@+id/main_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/main_home_selector"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:drawablePadding="@dimen/little_space"
            android:text="@string/main_home"
            android:textColor="@drawable/main_color_selector"/>
        <RadioButton
            android:id="@+id/main_tuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/main_tuan_selector"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:drawablePadding="@dimen/little_space"
            android:text="@string/main_tuan"
            android:textColor="@drawable/main_color_selector"/>
        <RadioButton
            android:id="@+id/main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/main_search_selector"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:drawablePadding="@dimen/little_space"
            android:text="@string/main_search"
            android:textColor="@drawable/main_color_selector"/>
        <RadioButton
            android:id="@+id/main_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/main_my_selector"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:drawablePadding="@dimen/little_space"
            android:text="@string/main_my"
            android:textColor="@drawable/main_color_selector"/>
    </RadioGroup>
</LinearLayout>