<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg_color">
    <LinearLayout
        android:id="@+id/title_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/top_bg_n"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/goods_details_back"
            android:drawableStart="@drawable/back"
            android:drawableLeft="@drawable/back"
            android:text="@string/goodsDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/goods_details_favorite"
            android:paddingLeft="@dimen/little_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite"
            android:layout_gravity="center_vertical"/>
        <ImageView
            android:id="@+id/goods_details_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/normal_space"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/normal_space"
            android:paddingRight="@dimen/normal_space"
            android:src="@drawable/share" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="@dimen/little_space">
        <TextView
            android:id="@+id/goods_details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.00"
            android:textSize="26dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/normal_orange_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="26dp"/>
        <TextView
            android:id="@+id/goods_details_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="￥0.00"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_buy_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_buy_now_select"
            android:text="@string/btn_buy_now"
            android:textColor="@color/white"
            android:padding="@dimen/little_space"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/goods_details_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/normal_bg_color"
        android:layout_above="@id/bottom_bar"
        android:layout_below="@id/title_bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/goods_details_image"
                    android:src="@drawable/default_pic"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_size_default"
                    android:layout_alignParentBottom="true"
                    android:text="@string/clickForBigImage"
                    android:gravity="center"
                    android:background="@color/normal_bg_color"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/little_space"
                android:background="@color/white">
                <TextView
                    android:id="@+id/goods_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_details_title"
                    android:textSize="@dimen/title_text_size"
                    />
                <TextView
                    android:id="@+id/goods_details_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_details_desc"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/divider"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:padding="@dimen/little_space"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/support_tuihuo"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_support"
                            android:text="@string/support_tuihuo"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/support_tuikuan"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_support"
                            android:text="@string/support_tuikuan"
                            android:gravity="center_vertical"/>

                    </LinearLayout>
                    <LinearLayout
                        android:padding="@dimen/little_space"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/deadline"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_deadline"
                            android:text="@string/deadline"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/already_sell_count"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/count"
                            android:text="@string/already_sell_count"
                            android:gravity="center_vertical"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/tuan_goods_details_layout"/>
            <include layout="@layout/tuan_goods_details_shop"/>
            <include layout="@layout/tuan_goods_details_warm"/>
            <include layout="@layout/tuan_goods_details_comment"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>